Dzień 3 - dodanie zakładki Słowniki, dodanie filtracji na listingu w/g ceny i alfabetycznie

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "sass": "^1.93.2"
+  },
+  "scripts": {
+    "watch": "sass assets/scss:assets/css --watch --source-map",
+    "build": "sass assets/scss:assets/css --style=compressed"
   }
 }
